--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ jobs:
   build-publish:
     name: Build, Push, and Release
     runs-on: ubuntu-latest
+    environment: Production
 
     steps:
       - name: Checkout
