--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,8 +1,12 @@
 resources:
-  - manifests/postgres-init.yaml
-  - manifests/postgres.yaml
-  - manifests/service.yaml
-  - manifests/deployment.yaml
+- manifests/postgres-init.yaml
+- manifests/postgres.yaml
+- manifests/service.yaml
+- manifests/deployment.yaml
 
 images:
-  - name: PROJECT/IMAGE
+- name: PROJECT/IMAGE
+  newName: hzd454/ping-pong
+  newTag: f3859caba9f16f4e3c2b717d6efcff6ea1590fa2
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
